find the problems of 321 and finish 16th March 2021

--- a/Insights/321.md
+++ b/Insights/321.md
@@ -21,3 +21,15 @@ we can use an array to record the position of these numbers.
 we can know the first huge number and its first place. If they are h and p. Also, we record the position we have used in this two numbers. It's a and b.
 
 then, the new rest length will be the length - rest of another array + length - current choice number and compare it with k - choosed number. If it's still have enough space, then we will choose this number.
+
+! holy...It's not correct? Essentially I use greedy algorithm. But if there are a number, exist in the same place and same value (e.g., 934,935), the greedy algorithm is still correct? which number shall we choose? Or we can choose these number randomly?becuase if we choose one number the other equal number still exist. We still can choose it. so the algorithm is correct.
+
+oh, we cannot choose the number randomly. for example, 
+
+[8,9]
+
+[3,9]
+
+3
+
+if we choose the first 9, we can only use 939. the answer is wrong...we still need another algorithm.
