finish 321 and 17 March

--- a/Insights/321.md
+++ b/Insights/321.md
@@ -33,3 +33,28 @@ oh, we cannot choose the number randomly. for example,
 3
 
 if we choose the first 9, we can only use 939. the answer is wrong...we still need another algorithm.
+
+let me see the std's solution.
+
+the std use greedy + dp algorithm
+
+1. maxNumber(nums,k): keep poping back, if this turn poping back elements is greater than before, then substitute these elements until the smaler elements. finally, choose the fisrt kth number.
+
+2. maxNumber(nums1,numers2) -> combine a bigger integer number. Like above in each turn choose the biggest number. But we do not substitute.
+
+3. maxNumber((maxNumber,i),(maxNumber,i)) => use DP to enumerate all combination of the first number and the second number
+
+(max value ans can compare two vectors in value format directly!)(but if we have to use compare, we shall use lexicographical_compare)
+
+```
+template<class InputIt1, class InputIt2>
+bool lexicographical_compare(InputIt1 first1, InputIt1 last1,
+                             InputIt2 first2, InputIt2 last2)
+{
+    for ( ; (first1 != last1) && (first2 != last2); ++first1, (void) ++first2 ) {
+        if (*first1 < *first2) return true;
+        if (*first2 < *first1) return false;
+    }
+    return (first1 == last1) && (first2 != last2);
+}
+```
