--- a/Insights/80.md
+++ b/Insights/80.md
@@ -4,4 +4,4 @@ Given a sorted array nums, remove the duplicates in-place such that duplicates a
 
 Do not allocate extra space for another array, you must do this by modifying the input array in-place with O(1) extra memory.
 
-Maybe just scan and record the last one, and only permit the last one show up twice.
+Maybe just scan and record the last one, and only permit the last one that show up twice.
