--- a/Insights/82.md
+++ b/Insights/82.md
@@ -1,4 +1,4 @@
 ## 82. Remove Duplicates from Sorted List II
 I think this is a simple question. we need to record the last one, if it's the same as the last then delete it!
 
-It's a little complicated thant the below thought. Because it need to remove duplicates, we need to record the last one before the duplicates. Then we need to process if duplicates in the head. Then we need to find the next duplicates ones and delete them and let the back link to the next header. then fidn the duplicates ones after the head.
+It's a little complicated than the below thought. Because it need to remove duplicates, we need to record the last one before the duplicates. Then we need to process if duplicates in the head. Then we need to find the next duplicates ones and delete them and let the back link to the next header. then fidn the duplicates ones after the head.
