--- a/Insights/81.md
+++ b/Insights/81.md
@@ -6,4 +6,4 @@ I think we can get the original array back. It contains the duplicates. It's a l
 
 I am wrong, it seems really different with the last one. I understand why we cannot use 33's solution. for example, [3 1 1] [1 1 3 1], the 1 == 1, but 3 can show in the left or the right. 
 
-Std use a simple tricks. we move the right pointer to a different position which do not haec the duplicates.
+Std use a simple tricks. we move the right pointer to a different position which do not have the duplicates.
