finish 420 and 16 in Aug and all TBC and typo in README

--- a/Insights/192.md
+++ b/Insights/192.md
@@ -8,7 +8,7 @@ Words are separated by one or more whitespace characters.
 
 we need to know following operations:
 
-sed `s` means replace  Specific characters and `g` means replace the cache `^$` means nothing between start ^ and end $
+sed `s` means replace  Specific characters and `g` means replace the gloabl all. `^$` means nothing between start ^ and end $
 
 uniq -c can output the number of duplicates one
 
@@ -20,3 +20,6 @@ then print it and sort it by n(string to number) r(ascending) k2(key is the seco
 
 cat words.txt | sed 's/ /\n/g' | sed '/^$/d' | sort | uniq -c | awk '{print $2, $1}' | sort -nrk2
 
+'/^$/d' is used to delete all the ' '
+
+For example a   a    b
