--- a/Insights/194.md
+++ b/Insights/194.md
@@ -2,11 +2,13 @@
 
 one-hot in bash... fantastic
 
-awk is for each line
+awk is for each line!!! defaults! the NR = 1 at first, and it start increasing.
 
 then we in awk (for) use another for we can store each column in a array
 
-this line 1 col in s[1] 2 col in s[2]
+there is a defaults loop for NR!!!
+
+this line 1th col in s[1] 2th col in s[2] 
 next line 1 col in s[1]
 
 therefore s[1] store all col
