--- a/Insights/195.md
+++ b/Insights/195.md
@@ -6,3 +6,4 @@ output tenth line; if < 10? error? or other mem space value?
 
 awk + NR done?
 
+the $i means the col i!!! this is a really important  thing to remember. 
