finish 451 and 15 OCT 2021

--- a/Insights/309.md
+++ b/Insights/309.md
@@ -11,9 +11,9 @@ I don't know...let me see the std's solution.
 
 these problem is a similar problem...we can use three array to record the information we need.
 
-buy[i] means we buy a stock in ith day's maximum profit.
+buy[i] means we bought a stock before ith day's maximum profit.
 
-sell[i] means we sell a stock in ith day's maximum profit.
+sell[i] means we sold a stock before ith day's maximum profit.
 
 rest[i] means we are coll down in ith day's maximum profit.
 
