finish 26 in OCT 2021 and 460

--- a/Insights/460.md
+++ b/Insights/460.md
@@ -13,4 +13,13 @@ When a key is first inserted into the cache, its use counter is set to 1 (due to
 
 The functions get and put must each run in O(1) average time complexity.
 
-like lru, we must record each key's frequency. and pop out the last one. key->frequency (unordered_map) each frequency is stored into a priority queue. It seems there is not such datasturcture... and priority queue is o(logn) .. 
+like lru, we must record each key's frequency. and pop out the last one. key->frequency (unordered_map) each frequency is stored into a priority queue. It seems there is not such datasturcture... and priority queue is o(logn) ..
+
+This problem is more tricky. we can do some thing like this. First, we have unordered map <freq, list<key> >; it means frequency -> keys, which keys are current in this frequency. Also, we have to store a minimum frequency. when we get one, we need to put current one into the freq+1's list. When we remove an element, we need to remove the minimum freq's first one.
+
+* get: we use a key to find the value. We use a key to find its frequency, use the key to find list iterator, remove it and push it into the freq+1's list.
+* put: we put the key value. If the cap is full. We need to eject the mini freq's element. We find the key (the minimum frequency's map to the list. the list's back is the key). And remove it form the list, from the map and its iterator. 
+
+Oh, shit... if we put twice, it access time shall be 2...
+
+AC! pay attention to if we put a existing value, the freq need to + 1 too. I think the problem shall clarify this point.
