finish 472 and 3 in NOV 2021 also add a Trie template into the code

--- a/Insights/468.md
+++ b/Insights/468.md
@@ -12,3 +12,5 @@ Leading zeros are allowed in xi.
 For example, "2001:0db8:85a3:0000:0000:8a2e:0370:7334" and "2001:db8:85a3:0:0:8A2E:0370:7334" are valid IPv6 addresses, while "2001:0db8:85a3::8A2E:037j:7334" and "02001:0db8:85a3:0000:0000:8a2e:0370:7334" are invalid IPv6 addresses.
 
 I think the best choice is using python regex? First we use regex to match the format xxx:xxx or xxx.xxx Then we use split function to extract each part of content and determine the content is valid or not.
+
+YES RE AC!
