finish 15 16 in DEC 2021 and 514 515

--- a/Insights/514.md
+++ b/Insights/514.md
@@ -11,4 +11,22 @@ At the stage of rotating the ring to spell the key character key[i]:
 * You can rotate the ring clockwise or anticlockwise by one place, which counts as one step. The final purpose of the rotation is to align one of ring's characters at the "12:00" direction, where this character must equal key[i].
 * If the character key[i] has been aligned at the "12:00" direction, press the center button to spell, which also counts as one step. After the pressing, you could begin to spell the next character in the key (next stage). Otherwise, you have finished all the spelling.
 
-Interesting questions.
+Interesting questions. I can generate a solution, but how to get a minimum. Let me analyze the problem first.
+
+if we want to move the hit the character, we need to move the index. Thus, for each time, we need to move the index to one of the character and spend some steps. But how to get the minimum steps? brute force - dfs each steps we can move to and count the minimal steps. Let see the size of the string.
+
+if we use greedy policy, each time finding the minimum step, it's wrong, because current step will affect next step's move.
+
+You can rotate the ring clockwise or anticlockwise by one place. I guess I shall use DP. each time we can rotate to target character by match it and by anti or clockwise. Thus, we need to use f[i,j,[0-1]] to represent we match i and j using 0 (clockwise) and 1 (anticlockwise). And only when i-1,j have matched, we can try to move pointer j to current index k where the i can match the character.
+
+It's clear that if we match i and j the pointer will point to j.
+
+* 1 <= ring.length, key.length <= 100
+* ring and key consist of only lower case English letters.
+* It is guaranteed that key could always be spelled by rotating ring.
+
+I have spend all of my time. I wrote most part of code. But how to figure out the clockwise and anticlockwise by compare the j and k.
+
+Let me see the std's solution. First of all, the std preprocess all related position of the characters.
+
+oh actually, because we only need to use i-1 to genearate i's pointer, we can use a array to store i-1's value. Perfect code style in std.
