modify the description

--- a/Insights/623.md
+++ b/Insights/623.md
@@ -10,4 +10,6 @@ cur's original left subtree should be the left subtree of the new left subtree r
 cur's original right subtree should be the right subtree of the new right subtree root.
 If depth == 1 that means there is no depth depth - 1 at all, then create a tree node with value val as the new root of the whole original tree, and the original tree is the new root's left subtree.
 
-Seems easy? DFS and each time when we reach a node at the target level (dfs once, depth - 1, when depth = 1 it means we has reach that depth in the tree.), insert new nodes at its left and right child. One thing to notice is that we need to keep reference of the original left and right child of the node.
+Seems easy? DFS and each time when we reach a node at the target level (dfs once, depth - 1, when depth = 1 it means we has reach the depth one level before the target depth. And we need to insert the value node in the next depth.). Therefore, we just need to  insert new nodes with new val at its left and right child. One thing to notice is that we need to keep reference of the original left and right child of the node.
+
+Accept. BTW the &Classname is a quick way to pass reference of the object. It is a pointer to the object. So we can change the value of the object in the function.
