--- a/Insights/632.md
+++ b/Insights/632.md
@@ -1,41 +1,26 @@
 ## 632. Smallest Range Covering Elements from K Lists
-You have k lists of sorted integers in non-decreasing order. Find the smallest range that includes at least one number from each of the k lists.
+### Intuition & Approach
+To maximize the overlapping region, our first step involves finding the initial overlap area. A potential solution is the application of a binary search algorithm, despite the complexity arising from a two-dimensional search space. 
 
-We define the range [a, b] is smaller than range [c, d] if b - a < d - c or a < c if b - a == d - c.
+The issue at hand can be addressed by using a heap data structure alongside the binary search. We can start with sorted arrays and utilize the heap to pinpoint the smallest possible range. 
 
-Example 1:
+To initiate, insert the smallest element from each array into the heap. Then, pop the smallest item and push the next element from its respective array. This process should be repeated until an array is exhausted. 
 
-Input: nums = \[[4,10,15,24,26],[0,9,12,20],[5,18,22,30]]
-Output: \[20,24]
-Explanation: 
-List 1: [4, 10, 15, 24,26], 24 is in range [20,24].
-List 2: [0, 9, 12, 20], 20 is in range [20,24].
-List 3: [5, 18, 22, 30], 22 is in range [20,24].
-Example 2:
+A variable can be used to monitor the heap's maximum value. The process of continuously popping the smallest item until an array is depleted indicates that the max value of this array remains the smallest within the heap. As such, the lower bound of the left range cannot exceed this value. 
 
-Input: nums = \[[1,2,3],[1,2,3],[1,2,3]]
-Output: [1,1]
- 
+The challenge then arises in defining the right interval. The right interval would be the heap's max value. 
 
-Constraints:
+An approach could be to identify the smallest max value, denoted as $k$, for each list. Subsequently, a binary search can be employed to find the minimal value greater than $k$. It’s worth noting that the time complexity for either step would be N*logN. 
 
-nums.length == k
-1 <= k <= 3500
-1 <= nums[i].length <= 50
--105 <= nums[i][j] <= 105
-nums[i] is sorted in non-decreasing order.
+However, this approach is not entirely accurate as $k$ might not correspond to the correct interval once placed into the heap. A heap is still necessary to ensure accuracy and maintain the smallest range, characterized by the smallest and largest values in the heap. 
 
-each list represent the range. First, assume we can sort each list to get smaller -> bigger a1,a2,a3...an
-a1 -> an
-b1 -> bn
-...
+Whenever an element is popped to reduce the range, an element from the original list should be pushed back into the heap.
 
-The best overlap we can get is to find the overlap area first. Can we use binary search for this problem?
-Assume overlap area is x,y. But the search space is two dimension. 
+Regarding the usage of Golang's standard library for managing struct values in the heap, it typically employs a two-dimensional array for the heap structure. This is a viable solution for our problem. Accept it, and let's proceed!
 
-I have no idea how to solve this problem. Let's check the std. Ohops, heap again.
+### Complexity
+- Time complexity:
+$O(MlogN)$ N is the number of column (length of single lits). N is the number of the list.
 
-First, the original array is sorted. Second, we can use heap to find the smallest range. First, we put the smallest element of each array into the heap. Then, we pop the smallest element and push the next element of the array. We keep doing this until one of the array is empty. We can use a variable to keep track of the max value of the heap. The reason why we keep poping the smallest until an array is empty, it means the max value of this array is still the smallest in the heap. The left range cannot be bigger than this. So this value is the left range lower bound. But the question is what is the right interval. the right interval will be the max value in the heap. 
-
-So why don;t we do this, find the minimal of max value $k$ for each list and then binary search to find the minimal of value greater than that $k$? N*logN either way. Because it's wrong!! The k may not be the right interval after put into the heap. Still need a heap to solve this. The heap maintain the smallest range. (smallest in heap, biggest in heap). Each time we pop out a element to make it smaller, we need to push one element from the original list back.
- 
+- Space complexity:
+$O(N)$ N is the number of the list.
