--- a/Insights/638.md
+++ b/Insights/638.md
@@ -8,13 +8,56 @@ You are also given an array special where special[i] is of size n + 1 where spec
 
 Return the lowest price you have to pay for exactly certain items as given, where you could make optimal use of the special offers. You are not allowed to buy more items than you want, even if that would lower the overall price. You could use any of the special offers as many times as you want.
 
+Constraints:
+
+* n == price.length == needs.length
+* 1 <= n <= 6
+* 0 <= price[i], needs[i] <= 10
+* 1 <= special.length <= 100
+* special[i].length == n + 1
+* 0 <= special[i][j] <= 50
+
 ### Intuition
-Because I am not allowed to buy more items than you want. Therefore, if I use special offer, I have to make sure that the number of item will not exclude the needs. Then next questions will be like which special offer is the cheapest. It's DP or not?
+When seeing the function array which represent the price and nums. It definitely will be a dynamic programming problem, because we can it has a iteration property. Easyly to see. A knapsack problem. 
+* First, we have special offer - quantity1,q2,q3.. and the total price for this offer, price for each item and needed.
+* You are not allowed to buy more items than you want, even if that would lower the overall price. But I don't know how to build dp equation. Let me see the std solution.
+* Because it's a DP problem, we definitely can write a iteration solution, but it's a little bit complex. So we can use recursion with memorizable variable to solve it.
 
-Here is the thing, we know that the original price of items. Thus we will know how much we gain from the special offer. But is it the best? Because maybe we have to buy some items which is the singlely cheaper in another offer. 
+### Approach
+* step 1:each time first we calculate if we all use the original without special offer, what's the price.
+* step 2: then we try to use each special offer, if we can use it, we will use it, and then we will dfs to next level with the new needs which the items we purchased has been deducted.
+* step 3: we will compare the price we get from step 1 and step 2, and return the min one.
 
-Why not? Try greedy and choose the one whoes discount is the biggest. And repeat this provcess until we cannot use any one of the special offer.
 
-Nope. I am wrong. This is a DP problem. Easyly to see. A knapsack problem. It just trun the weight sum into the price! And offer price is the weight of items! So easy to see it.
+### Complexity
+- Time complexity:
+Because we need to iterate all possible combination of special offer, so the time complexity is $$O(2^n)$$
 
-f[]
+- Space complexity:
+for the recursion, we need to store the needs, so the space complexity is $$O(n^n)$$ because each elements in dict is a list with n elements, it has 0 - n possibilities, therefore in total we may have $$n^n$$ possibilities.
+
+### Code
+```python
+class Solution:
+    def shoppingOffers(self, price: List[int], special: List[List[int]], needs: List[int]) -> int:
+        d = {}
+        def dfs(price, special, needs):
+            if not needs:
+                return 0
+            # calculate the price without special offer
+            res = sum([price[i] * needs[i] for i in range(len(needs))])
+            # try to use each special offer
+            for offer in special:
+                # check if we can use this offer
+                for i in range(len(needs)):
+                    if needs[i] < offer[i]:
+                        break
+                else:
+                    # use this offer
+                    tmp = [needs[j] - offer[j] for j in range(len(needs))]
+                    if tuple(tmp) not in d:
+                        d[tuple(tmp)] = dfs(price, special, tmp)
+                    res = min(res, offer[-1] + d[tuple(tmp)])
+            return res
+        return dfs(price, special, needs)
+```
